Fixed the navbar clipping through the app-body div

--- a/web/src/styles/App.scss
+++ b/web/src/styles/App.scss
@@ -17,7 +17,7 @@ section {
   flex: 2;
   user-select: none;
   cursor: default;
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   display: flex;
   flex-flow: column;
